--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "cel055.easyfind-dark-theme",
     "title": "Easy Find",
-    "description": "This theme was made to you easily find yours self on the code",
+    "description": "This theme was made to you easily find your self on the code",
     "homepage": "https://github.com/cel055/easyfind-dark-theme",
     "version": "1.0.0",
     "author": "cel055 <cel055.ufsc@gmail.com> ",
